# ga4gh-mcp-server

./: .gitignore  Dockerfile  README.md  fly.toml  pyproject.toml  render.yaml
config/: api-keys.example.yaml  server.example.yaml
docs/superpowers/specs/: 2026-04-16-ga4gh-mcp-design.md
src/ga4gh_mcp/: __init__.py  __main__.py  server.py
src/ga4gh_mcp/auth/: api_key.py  session.py
src/ga4gh_mcp/clients/: __init__.py  base.py  beacon.py  data_connect.py  drs.py  htsget.py  refget.py  registry.py  service_info.py  service_registry.py  tes.py  trs.py  wes.py
src/ga4gh_mcp/config/: settings.py
src/ga4gh_mcp/tools/: beacon_tools.py  data_connect_tools.py  drs_tools.py  htsget_tools.py  refget_tools.py  registry.py  registry_tools.py  service_info_tools.py  service_registry_tools.py  tes_tools.py  trs_tools.py  wes_tools.py
tests/: __init__.py  conftest.py  test_auth.py  test_main.py  test_server.py  test_settings.py
tests/test_clients/: test_base_client.py
tests/test_tools/: test_beacon_tools.py  test_data_connect_tools.py  test_drs_tools.py  test_htsget_tools.py  test_refget_tools.py  test_registry_tools.py  test_service_tools.py  test_tes_tools.py  test_trs_tools.py  test_wes_tools.py
